tests/ui/expr/if/if-without-else-result.stderr
error[E0317]: `if` may be missing an `else` clause
  --> $DIR/if-without-else-result.rs:4:13
   |
LL |     let a = if true { true };
   |             ^^^^^^^^^^----^^
   |             |         |
   |             |         found here
   |             expected `bool`, found `()`
   |
   = note: `if` expressions without `else` evaluate to `()`
   = help: consider adding an `else` block that evaluates to the expected type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0317`.
